--- a/PartyHub_Project/static/css/Parties_css/party_details.css
+++ b/PartyHub_Project/static/css/Parties_css/party_details.css
@@ -69,3 +69,76 @@
 .leave-party-button:hover {
     background-color: #c0392b;
 }
+
+.no-ticket-message p {
+    color: #d9534f;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.questions-section {
+    margin-top: 30px;
+}
+
+.questions-section h3 {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.questions-list {
+    margin-top: 20px;
+}
+
+.question, .answer {
+    background-color: #e9ecef;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.question {
+    border-left: 4px solid #007bff;
+}
+
+.answer {
+    border-left: 4px solid #28a745;
+    margin-left: 20px;
+}
+
+.details-link {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* Delete Party Button Style */
+.details-link.delete-party {
+    background-color: #ff4d4d;
+    color: #fff;
+    border: 2px solid #ff4d4d;
+}
+
+.details-link.delete-party:hover {
+    background-color: #e60000;
+    border-color: #e60000;
+    color: #fff;
+}
+
+/* Edit Party Button Style */
+.details-link.edit-party {
+    background-color: #5bc0de;
+    color: #fff;
+    border: 2px solid #5bc0de;
+}
+
+.details-link.edit-party:hover {
+    background-color: #31b0d5;
+    border-color: #31b0d5;
+    color: #fff;
+}
