--- a/PartyHub_Project/templates/Party/party_delete.html
+++ b/PartyHub_Project/templates/Party/party_delete.html
@@ -1,11 +1,18 @@
 {% extends "Common/base.html" %}
-
+{% load static %}
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/Parties_css/delete_party.css' %}">
+{% endblock %}
 {% block content %}
-    <h2>Are you sure you want to delete this party?</h2>
-    <p>{{ object.title }}</p>
-    <form method="post">
+<div class="delete-party-container">
+    <h2>Are you really, really sure you want to say goodbye to this party? 🎉</h2>
+    <p><strong>Party:</strong> "{{ object.title }}"</p>
+    <p class="warning-message">This action can't be undone, so make sure you're not just having second thoughts!</p>
+
+    <form method="post" class="delete-form">
         {% csrf_token %}
-        <button type="submit">Yes, delete it</button>
+        <button type="submit" class="confirm-delete-button">Yes, delete it 💔</button>
+        <a href="{% url 'user_parties' %}" class="cancel-delete-link">No, take me back! 😅</a>
     </form>
-    <a href="{% url 'user_parties' %}">Cancel</a>
+</div>
 {% endblock %}
