--- a/PartyHub_Project/templates/Common/footer.html
+++ b/PartyHub_Project/templates/Common/footer.html
@@ -4,6 +4,6 @@
     </div>
     <div id="social_media_links">
         <a href="https://www.facebook.com" target="_blank">Facebook</a>
-        <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/kaloianralchev/" target="_blank">Instagram</a>
     </div>
 </footer>
