--- a/PartyHub_Project/templates/Party/party_details.html
+++ b/PartyHub_Project/templates/Party/party_details.html
@@ -26,24 +26,26 @@
             
             <!-- Бутон за участие или напускане на партито -->
             {% if user.is_authenticated %}
-{#                {% if party.organizer == user %}#}
+
                 {% if status == 'owner' %}
+
                     <a href="{% url 'delete_party' party.slug %}" class="details-link delete-party">Delete Party</a>
                     <a href="{% url 'edit_party' party.slug %}" class="details-link edit-party">Edit Party</a>
 
-
                 {% else %}
+
                     {% if  status == 'can_buy'%}
+
                         <button type="submit" class="join-party-button" onclick="window.location.href='{% url 'get_ticket' party.slug %}'">Buy Ticket</button>
+
                     {% else %}
+
                         <div class="no-ticket-message">
+
                                 {% if status == 'no_spots' %}
                                     <p>🎟️ Sorry, party's all packed! No tickets left. 🎉</p>
                                     {% elif status == 'have_ticket' %}
-                                        <p>Owlready have a ticket</p>
-{#                                    <p>⏰ Oh no, you missed it! The party has already started! 🕺💃</p>#}
-{#                                {% elif party.has_ended %}#}
-{#                                    <p>🚪 The party's over, and the dance floor is closed. Hope to see you at the next one! 🥳</p>#}
+                                         <p>🦉 Hoot hoot! You’re all set with a ticket! 🎟️ Ready to party? 🕺💃</p>
                                 {% elif status == late_for_tickets %}
                                     <p>⏳ Oops! Ticket sales closed on {{ party.registration_deadline }}. Better luck next time! 😉</p>
                                 {% else %}
@@ -51,13 +53,20 @@
                                 {% endif %}
                         </div>
 
-                        {% endif %}
+                    {% endif %}
+
                 {% endif %}
+
             {% else %}
+
                 <p>Please <a href="{% url 'login' %}">log in</a> to join this party.</p>
+
             {% endif %}
+
         {% if user.is_authenticated %}
+
                 {% if question_form %}
+
                     <div class="questions-section">
                         <h3>Ask a Question:</h3>
                         <form method="post" action="{% url 'question_create' party.slug %}">
@@ -66,7 +75,9 @@
                             <button type="submit" class="question-button">Post Question</button>
                         </form>
                     </div>
+
                 {% endif %}
+
             {% endif %}
 
             <div class="questions-list">
@@ -89,29 +100,6 @@
                     </div>
                 {% endfor %}
             </div>
-{#        {% if user.is_authenticated %}#}
-{#            {% if question_form %}#}
-{#                <form method="post" action="{% url 'question_create' party.slug %}">#}
-{#                    {% csrf_token %}#}
-{#                    {{ question_form }}#}
-{#                <button>Post question</button>#}
-{#                </form>#}
-{#                {% endif %}#}
-{#        {% endif %}#}
-{#        {% for question in party.questions.all %}#}
-{#            {{ question.author }}{{ question.text }}#}
-{#            {% if question.answer %}#}
-{#                {{  question.answer.text }} from  {{  question.answer.author }}#}
-{#                {% else %}#}
-{#                {% if answer_form %}#}
-{#                    <form method="post" action="{% url 'answer_create' question.pk party.slug %}">#}
-{#                        {% csrf_token %}#}
-{#                        {{ answer_form }}#}
-{#                        <button>Post answer</button>#}
-{#                    </form>#}
-{#                    {% endif %}#}
-{#            {% endif %}#}
-{#        {% endfor %}#}
         </div>
     </div>
 </div>
