fixed: bugs fix and more js

--- a/PartyHub_Project/static/css/Parties_css/create_party.css
+++ b/PartyHub_Project/static/css/Parties_css/create_party.css
@@ -101,3 +101,12 @@
 .submit-btn:hover {
     background-color: #2980b9;
 }
+
+ul .error {
+    color: red;
+    marker: none;
+}
+
+ul li::marker {
+    display: none;
+}
