--- a/PartyHub_Project/static/css/Parties_css/live_party.css
+++ b/PartyHub_Project/static/css/Parties_css/live_party.css
@@ -94,6 +94,21 @@
     transition: background-color 0.3s;
 }
 
+.status-button1 {
+    padding: 5px 10px;
+    font-size: 14px;
+    color: #fff;
+    background-color: #ea0d0d;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.status-button1:hover {
+    background-color: #ea0d0d;
+}
+
 .status-button:hover {
     background-color: #45a049;
 }
