--- a/PartyHub_Project/templates/Party/party_list.html
+++ b/PartyHub_Project/templates/Party/party_list.html
@@ -10,7 +10,7 @@
     <div class="search-bar-container">
         <form class="search-form" method="GET">
             <label>
-                <input type="text" name="q" value="{{ request.GET.q }}" class="search-input" placeholder="Search for events...">
+                <input type="text" name="q" value="{{ request.GET.q }}" class="search-input" placeholder="Search for parties...">
             </label>
             <button type="submit" class="search-button">Search</button>
         </form>
