fix: fixed is public checkbox styles

--- a/PartyHub_Project/static/css/Parties_css/create_party.css
+++ b/PartyHub_Project/static/css/Parties_css/create_party.css
@@ -107,3 +107,20 @@ ul .error{
     marker: none;
     list-style-type: none;
 }
+
+.form-group input[type="checkbox"] {
+    /*flex: 0; !* За да запази размера си *!*/
+    /*margin-right: 5px;*/
+    /*display: inline;*/
+}
+
+.form-section:last-of-type .form-group:last-of-type {
+    /* Добави стилове за последния .form-group */
+    display: inline;
+    /*align-items: center;*/
+    /*background-color: red;*/
+}
+
+#id_is_public {
+    width: 20px;
+}
